crates/cadenza-compiler/test-data/semantics/measures-error-add-incompatible-dimensions.expected
error: incompatible dimensions
 --> test.cdz:3:1
  |
3 | 100meter + 10second
  | ^^^^^^^^^^^^^^^^^^^ cannot add `meter` and `second`
  |
  = note: left side has dimension: meter
  = note: right side has dimension: second
  = help: addition requires matching dimensions