crates/cadenza-compiler/test-data/semantics/measures-error-add-incompatible-dimensions.cdz
measure meter
measure second
100meter + 10second